--- a/src/App.css
+++ b/src/App.css
@@ -90,3 +90,32 @@ h1 {
 .todo-item button:hover {
   background: #e60000;
 }
+
+.todo-item .edit-btn, .todo-item .save-btn {
+  background-color: #f0ad4e;
+  margin-right: 8px;
+}
+
+.todo-item .save-btn {
+  background-color: #5cb85c;
+}
+
+.todo-item .edit-btn:hover {
+  background-color: #ec971f;
+}
+
+.todo-item .save-btn:hover {
+  background-color: #4cae4c;
+}
+
+.todo-item input[type="text"] {
+  flex-grow: 1;
+  border: 1px solid #ddd;
+  padding: 0.4rem;
+  border-radius: 4px;
+}
+
+.todo-item > div {
+  display: flex;
+  align-items: center;
+}
